fixed profile pic not showing and added new Project page

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -124,8 +124,8 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 36px;
-  height: 36px;
+  width: 28px;
+  height: 28px;
 
   @include breakpoint($large) {
     display: block;
@@ -175,7 +175,6 @@
 .sidebar .author__name {
   font-family: $sans-serif;
   font-size: 18px;
-  padding-left: 5px;
 }
 
 .author__bio {
